update Russian localization (#684)
* update Russian localization

* tweak Russian localization

* tweak Russian localization #2

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,63 +1,91 @@
 {
-  "App-Meta-Description": "Оптимизатор доходности с многими цепями",
-  "Disclaimer": "Использование смарт-контрактов, токенов и криптовалюты всегда сопряжено с риском. Думайте своей головой перед инвестированием.",
-  "Vault-Wallet": "Кошелек",
+  "App-Meta-Description": "Кросс-чейн протокол по оптимизации доходности",
+  "Disclaimer": "Использование смарт-контрактов, токенов и криптовалюты всегда сопряжено с риском. DYOR перед тем, как инвестировать.",
+  "Network-UnknownError": "Произошла неизвестная ошибка.",
+  "Network-ConnectionRequired": "Необходимо подключить кошелек к сети {{network}}.",
+  "Network-Supports": "Это приложение поддерживает сеть {{network}}.",
+  "Network-ConnectedTo": "Сейчас вы подключены к сети {{network}}.",
+  "Network-ConnectedUnsupported": "Вы подключены к сети, которая не поддерживается.",
   "Network-ConnectWallet": "Подключить кошелек",
+  "Network-DisconnectWallet": "Отключить кошелек",
+  "Network-SwitchToNetwork": "Переключится на сеть {{network}}",
+  "Network-GoToApp": "Переключить приложение на сеть {{network}}",
+  "Network-SwitchNote": "Вам может потребоваться переключить сеть самостоятельно, через кошелек.",
+  "Network-NoWalletAddress": "Предоставьте доступ к одному из аккаунтов вашего кошелька.",
+  "Vault-Wallet": "Кошелек",
   "Vault-Balance": "Баланс",
   "Vault-APR": "APR",
   "Vault-APY": "APY",
   "Vault-APYDaily": "В день",
-  "Vault-TVL": "Общая стоимость",
-  "Vault-AutocompoundingNote": "Все хранилища автоматически реинвестируют ваш депозит",
+  "Vault-TVL": "TVL",
+  "Vault-AutocompoundingNote": "Реинвестирование оптимально автоматизировано",
   "Vault-Approving": "Подтверждение...",
   "Vault-ApproveButton": "Подтвердить",
-  "Vault-ApprovalSuccess": "Успешно подтвердили",
-  "Vault-ApprovalError": "Ошибка подтверждения: {{error}}",
-  "Vault-DepositButton": "Депозит",
-  "Vault-DepositButtonAll": "Внести все",
-  "Vault-DepositTokensNote": "Вы получите токен {{mooToken}} в качестве квитанции за ваши вложенные активы {{assetToken}}. Этот токен необходим для вывода вашего вклада {{assetToken}}, не продавайте или переводите {{mooToken}} другим людям!",
-  "Vault-DepositFee": "Комиссия за депозит {{depositFee}}, вывод без комиссии",
-  "Vault-DepositAndWithdrawFee": "Комиссия за депозит - {{depositFee}}. Комиссия за снятие средств - {{withdrawalFee}}.",
+  "Vault-ApprovalSuccess": "Успешно подтверждено",
+  "Vault-ApprovalError": "Ошибка при подтверждении: {{error}}",
+  "Vault-BifiBuyback": "Выкуп BIFI {{amount}}/в день",
+  "Vault-DepositButton": "Ввести",
+  "Vault-DepositButtonAll": "Ввести все",
+  "Vault-DepositTokensNote": "Вы получите токен {{mooToken}}, в качестве подтверждения внесения вами активов {{assetToken}}. Этот токен необходим для того, чтобы вывести ваши активы {{assetToken}}. Не продавайте и не переводите {{mooToken}} никому!",
+  "Vault-DepositAndWithdrawFee": "Комиссия за ввод: {{depositFee}}, Комиссия за вывод: {{withdrawalFee}}",
   "Vault-Deposited": "Внесено",
-  "Vault-DepositSuccess": "Успешный депозит",
-  "Vault-DepositError": "Ошибка внесения: {{error}}",
-  "Vault-DepositScenario": "Депозит приведет к:",
-  "Vault-DepositScenarioSwap": "Чтобы сбалансировать пару ликвидности, обменяйте {{swapIn}} на {{swapOut}} (± комиссию на slippage {{slipageTolerance}} и комиссию за депозит, если таковые имеются)",
-  "Vault-DepositScenarioAddLiquidity": "Добавьте ликвидность, чтобы получить {{poolToken}}",
-  "Vault-DepositScenarioDepositToVault": "Получен депозит {{poolToken}} в хранилище Бифи",
-  "Vault-DepositScenarioReturnDust": "Вернуть неиспользованное остаточное количество {{tokenA}} и {{tokenB}} в Ваш кошелек",
-  "Vault-Withdrawing": "Вывод...",
+  "Vault-DepositSuccess": "Средства успешно введены",
+  "Vault-DepositError": "Ошибка при вводе: {{error}}",
+  "Vault-DepositScenario": "В результате ввода:",
+  "Vault-DepositScenarioSwap": "Чтобы сбалансировать пару ликвидности, {{swapIn}} будут обменяны на {{swapOut}} (± уплачена комиссия за ввод и проскальзывание {{slippageTolerance}}, если таковые имеются)",
+  "Vault-DepositScenarioAddLiquidity": "Ликвидность будет использована для получения {{poolToken}}",
+  "Vault-DepositScenarioDepositToVault": "Полученные {{poolToken}} будут введены в хранилище Beefy",
+  "Vault-DepositScenarioReturnDust": "Неиспользованные остатки {{tokenA}} и {{tokenB}} будут возвращены на ваш кошелек",
+  "Vault-Withdrawing": "Производится вывод...",
   "Vault-WithdrawButton": "Вывести",
   "Vault-WithdrawButtonAll": "Вывести все",
-  "Vault-WithdrawFeeGlobal": "Комиссия за снятие средств - 0,1% для всех хранилищ (если на карте хранилища не указано иное).",
-  "Vault-WithdrawFee": "Комиссия за снятие средств - {{withdrawalFee}}.",
-  "Vault-WithdrawSuccess": "Успешный вывод",
-  "Vault-WithdrawError": "Ошибка вывода: {{error}}",
-  "Vault-WithdrawScenario": "Вывод приведет к:",
-  "Vault-WithdrawScenarioRedeem": "Возвращению токена {{mooToken}} за {{poolToken}}",
-  "Vault-WithdrawScenarioRemoveLiquidity": "Убрать ликвидность из {{pool Token}}, чтобы получить {{tokenA}} и {{tokenB}}",
-  "Vault-WithdrawScenarioSwap": "Предполагаемый обмен {{swapIn}} за {{swapOut}} (± комиссия за slippage {{slipageTolerance}} и за снятие средств, если таковые имеются)",
-  "Vault-WithdrawScenarioTotal": "Предполагаемый перевод {{totalOut}} в Ваш кошелек",
-  "Vault-Harvesting": "Сбор урожая...",
-  "Vault-HarvestButton": "Собрать урожай",
-  "Vault-HarvestConfirm": "Подтвердить урожай?",
-  "Vault-HarvestDescription": "Ручная сборка НЕ ТРЕБУЕТСЯ. Все хранилища собираются автоматически. Это расширенная функция, предназначенная для опытных пользователей. Вы уверены, что хотите собрать урожай?",
-  "Vault-HarvestSuccess": "Успешный сбор",
-  "Vault-HarvestError": "Ошибка сбора: {{error}}",
-  "Vault-LastHarvest": "Последний сбор",
+  "Vault-WithdrawFeeGlobal": "Комиссия за вывод - 0,1% для всех хранилищ (кроме тех, в описании которых указано иное)",
+  "Vault-WithdrawSuccess": "Вывод прошел успешно",
+  "Vault-WithdrawError": "Ошибка при выводе: {{error}}",
+  "Vault-WithdrawScenario": "В результате вывода:",
+  "Vault-WithdrawScenarioRedeem": "Токены {{mooToken}} будет обменяны на {{poolToken}}",
+  "Vault-WithdrawScenarioRemoveLiquidity": "Ликвидность из {{poolToken}} будет выведена, чтобы вы получили {{tokenA}} и {{tokenB}}",
+  "Vault-WithdrawScenarioSwap": "Будет получено примерно {{swapIn}}, которые будут обменяны на {{swapOut}} (± {{slippageTolerance}} проскальзывание и комиссия за вывод, если таковые имеются)",
+  "Vault-WithdrawScenarioTotal": "Примерно {{totalOut}} будет переведено на ваш кошелек",
+  "Vault-Harvesting": "Сбор прибыли...",
+  "Vault-HarvestButton": "Собрать прибыль",
+  "Vault-HarvestConfirm": "Подтвердить сбор прибыли?",
+  "Vault-HarvestDescription": "Собирать прибыль вручную — НЕ ТРЕБУЕТСЯ. Все хранилища собирают и реинвестируют прибыль автоматически. Это расширенная функция, предназначенная для опытных пользователей. Вы уверены, что хотите собрать прибыль?",
+  "Vault-HarvestSuccess": "Прибыль собрана успешно",
+  "Vault-HarvestError": "Ошибка при сборе прибыли: {{error}}",
+  "Vault-LastHarvest": "Крайний сбор прибыли",
   "Vault-MainTitle": "Хранилища",
-  "Vault-SecondTitle": "Депозит & Заработок денег",
-  "Vault-DepositsPausedTitle": "Депозиты приостановлены",
-  "Vault-DepositsPausedMsg": "Депозиты в это хранилище приостановлены.",
-  "Vault-DepositsRetiredTitle": "УСТАРЕЛ",
-  "Vault-DepositsRetiredMsg": "Сейф устарел. Выведите свои средства как можно скорее!",
-  "Vault-Staked": "Стейковано",
+  "Vault-SecondTitle": "Вводите средства и зарабатывайте",
+  "Vault-DepositsPausedTitle": "Вводы приостановлены",
+  "Vault-DepositsPausedMsg": "Вводы в это хранилище приостановлены.",
+  "Vault-DepositsRetiredTitle": "УСТАРЕЛО",
+  "Vault-DepositsRetiredRewardsTitle": "УСТАРЕЛО - Соответствующая платформа прекратила выплату наград.",
+  "Vault-DepositsRetiredExploitTitle": "УСТАРЕЛО - В контракте токена была найдена уязвимость, средства в сохранности в хранилище.",
+  "Vault-DepositsRetiredTVLTitle": "УСТАРЕЛО - слишком низкая общая стоимость средств в контракте (TVL).",
+  "Vault-DepositsRetiredMsg": "Хранилище устарело. Выведите свои средства как можно скорее",
+  "Vault-Staked": "В стейкинге",
   "Vault-Description": "Использует: {{vault}}",
-  "Vault-Network": "Выбрать сеть",
-  "Vault-Experimental": "Экспериментальный",
-  "Vault-Loading": "Загрузка хранилища",
+  "Vault-Network": "Выберите сеть",
+  "Vault-Experimental": "Экспериментальное",
+  "Vault-Loading": "Хранилище загружается...",
   "Vault-NotFound": "Хранилище {{vaultId}} не найдено",
-  "Vaults-Back": "Детали хранилища",
+  "Vault-Breakdown-VaultApr": "APR Хранилища",
+  "Vault-Breakdown-TradingApr": "APR от Торгов",
+  "Vault-Breakdown-BoostApr": "Буст APR",
+  "Vault-Breakdown-VaultDaily": "Прибыль хранилища в день",
+  "Vault-Breakdown-TradingDaily": "Прибыль от торгов в день",
+  "Vault-Breakdown-BoostDaily": "Буст в день",
+  "Vault-Boosts-Staked-Single": "В стейкинге {{name}} буст",
+  "Vault-Boosts-Staked-Count": "В стейкинге {{count}} бусты",
+  "Vault-Banner-CakeV2-StakeLabel": "Стейкайте свои {{symbol}}",
+  "Vault-Banner-CakeV2-StakeValue": "Новое хранилище для ваших {{symbol}}",
+  "Vault-Banner-CakeV2-SaferLabel": "Более безопасное",
+  "Vault-Banner-CakeV2-SaferValue": "{{count}} посредник",
+  "Vault-Banner-CakeV2-SmarterLabel": "Эффективнее",
+  "Vault-Banner-CakeV2-SmarterValue": "более {{count}} операций реинвестирования в год",
+  "Vault-Banner-CakeV2-FairerLabel": "Экономнее",
+  "Vault-Banner-CakeV2-FairerValue": "на {{percent}}% меньше трат на комиссии",
+  "Vaults-Back": "Назад к хранилищам",
   "Hide-Zero-Balances": "Скрыть нулевые балансы",
   "Hide-Zero-Vault-Balances": "Хранилища со средствами",
   "Retired-Vaults": "Устаревшие хранилища",
@@ -68,52 +96,55 @@
   "Filters-All": "Все",
   "Filters-Default": "По умолчанию",
   "Filters-Reset": "Очистить фильтры",
+  "Filters-Type-SingleAssets": "Один токен",
+  "Filters-Type-StableLPs": "LP в стейблкоинах",
+  "Filters-Type-Stables": "LP со стейблкоином",
   "Confirm": "Подтвердить",
   "Cancel": "Отклонить",
-  "No-Results": "Нет результатов",
+  "No-Results": "Ничего не найдено",
   "docs": "docs",
-  "news": "news",
-  "source": "source",
+  "news": "новости",
+  "source": "исходный код",
   "gov": "gov",
-  "vote": "vote",
-  "stats": "stats",
+  "vote": "проголосовать",
+  "stats": "статистика",
   "app": "app",
-  "socials": "Соцсети",
+  "socials": "соцсети",
   "buy": "купить",
-  "products": "Продукты",
-  "Powered-By": "Сделано",
-  "IFO-Guide": "IFO Руководство",
+  "products": "продукты",
+  "Powered-By": "POWERED BY",
+  "IFO-Guide": "Руководство по IFO",
   "Available-To-Stake": "Доступно для стейкинга",
   "Stake": "Стейкать",
-  "Available-To-Unstake": "Доступно для анстейка",
-  "Unstake": "Анстейк",
+  "Available-To-Unstake": "Можно разблокировать",
+  "Unstake": "Разблокировать",
   "Max": "Максимум",
-  "Coming-Soon": "Скоро доступно",
-  "Finished": "Закончено",
-  "End": "Конец",
+  "Coming-Soon": "Уже совсем скоро",
+  "Finished": "Завершен",
+  "End": "Закончится через",
   "Stakes-Meta-Title": "Бусты - {{networkName}}",
-  "Stake-Meta-Title": "Заработать {{earnedToken}} - буст от {{boostedBy}} - {{networkName}}",
+  "Stake-Meta-Title": "Зарабатывайте {{earnedToken}} - благодаря Бусту от {{boostedBy}} - {{networkName}}",
   "Stake-Button-Stake": "Стейкать",
-  "Stake-Button-Claim": "Требовать",
+  "Stake-Button-Claim": "Получить",
   "Stake-Button-Approval": "Подтвердить",
-  "Stake-Button-Stake-Tokens": "Стейкинг токенов",
-  "Stake-Button-Unstake-Tokens": "Анстейкинг токенов",
-  "Stake-Button-Claim-Rewards": "Требовать награды",
-  "Stake-Button-Exit": "Требовать и анстейкать",
-  "Stake-Balancer-Current-Staked": "Сейчас стейковано",
+  "Stake-Button-Stake-Tokens": "Стейкать токены",
+  "Stake-Button-Unstake-Tokens": "Вывести из стейкинга",
+  "Stake-Button-Claim-Rewards": "Получить награды",
+  "Stake-Button-Exit": "Получить и вывести",
+  "Stake-Balancer-Current-Staked": "В стейкинге сейчас",
   "Stake-Balancer-Rewards-Available": "Доступные награды",
   "Stake-Balancer-Half-Time": "Половина времени",
   "Stake-BoostedBy": "Буст от {{name}}",
   "Stake-Button-Back": "Назад",
-  "Stake-Pool-Retired": "Пул закончился, выведите ваши деньги.",
-  "Stake-Total-Value-Locked": "Общее кол. стейк. {{mooToken}}",
-  "Stake-Your-Pool": "Ваш пул",
-  "Stake-Current-Daily": "Текущая дневная ставка",
+  "Stake-Pool-Retired": "Пул завершен, выведите ваши средства.",
+  "Stake-Total-Value-Locked": "Сумма {{mooToken}} в стейкинге",
+  "Stake-Your-Pool": "Ваша доля",
+  "Stake-Current-Daily": "Текущая прибыль в день",
   "Add-Liquidity": "Добавить ликвидность",
   "Remove-Liquidity": "Убрать ликвидность",
   "Buy-Token": "Купить токен",
-  "Wrap-BNB": "Обернуть BNB",
+  "Wrap-BNB": "Wrap BNB",
   "Boost": "Буст",
   "Experimental": "Экспериментальный",
-  "Select-Network": "Выбрать сеть"
+  "Select-Network": "Выберите сеть"
 }
