Updated on ZH and MS Translation Strings (#744)
* Updated on Some Strings

* Slight update

* Updated Malay (MS) Translation

--- a/src/locales/ms/translation.json
+++ b/src/locales/ms/translation.json
@@ -1,7 +1,17 @@
 {
   "App-Meta-Description": "Pengoptimum Hasil Berbilang Rangkaian",
   "Disclaimer": "Penggunaan Kontrak Pintar, Token, dan Kripto adalah berisiko. DYOR sebelum melabur.",
-  "Network-ConnectWallet": "Sambungkan Dompet",
+  "Network-UnknownError": "Satu ralat yang tidak diketahui telah berlaku.",
+  "Network-ConnectionRequired": "Sambungan dompet ke {{network}} diperlukan.",
+  "Network-Supports": "Aplikasi ini menyokong {{network}}.",
+  "Network-ConnectedTo": "Anda kini disambungkan ke {{network}}.",
+  "Network-ConnectedUnsupported": "Anda kini disambungkan ke rangkaian yang tidak disokong.",
+  "Network-ConnectWallet": "Sambungkan dompet",
+  "Network-DisconnectWallet": "Putuskan sambungan dompet",
+  "Network-SwitchToNetwork": "Tukar ke rangkaian {{network}}",
+  "Network-GoToApp": "Pergi ke aplikasi {{network}}",
+  "Network-SwitchNote": "Anda perlu menukar rangkaian secara manual melalui dompet anda.",
+  "Network-NoWalletAddress": "Benarkan akses ke satu akaun di dompet anda.",
   "Vault-Wallet": "Dompet",
   "Vault-Balance": "Baki",
   "Vault-APR": "APR",
@@ -49,12 +59,15 @@
   "Vault-DepositsPausedTitle": "Deposit dijeda",
   "Vault-DepositsPausedMsg": "Deposit dijeda untuk vault tersebut.",
   "Vault-DepositsRetiredTitle": "Bersara",
+  "Vault-DepositsRetiredRewardsTitle": "Bersara - Platform dasar menghentikan ganjaran.",
+  "Vault-DepositsRetiredExploitTitle": "Bersara - Token telah dieksploitasi, dana adalah SAFU di vault.",
+  "Vault-DepositsRetiredTVLTitle": "Bersara - TVL terlalu rendah.",
   "Vault-DepositsRetiredMsg": "Vault bersara, keluarkan dana anda ASAP",
   "Vault-Staked": "Stake",
   "Vault-Description": "Guna: {{vault}}",
   "Vault-Network": "Pilih Rangkaian",
   "Vault-Experimental": "Eksperimen",
-  "Vault-Loading": "Memuatkan Vault",
+  "Vault-Loading": "Memuatkan Vault...",
   "Vault-NotFound": "Vault {{vaultId}} tidak dijumpai",
   "Vault-Breakdown-VaultApr": "Vault APR",
   "Vault-Breakdown-TradingApr": "Trading APR",
@@ -62,6 +75,8 @@
   "Vault-Breakdown-VaultDaily": "Vault Harian",
   "Vault-Breakdown-TradingDaily": "Trading Harian",
   "Vault-Breakdown-BoostDaily": "Boost Harian",
+  "Vault-Boosts-Staked-Single": "Staked di {{name}} boost",
+  "Vault-Boosts-Staked-Count": "Staked di {{count}} boosts",
   "Vault-Banner-CakeV2-StakeLabel": "Stake {{symbol}} anda",
   "Vault-Banner-CakeV2-StakeValue": "Vault {{symbol}} yang baru dan tulen",
   "Vault-Banner-CakeV2-SaferLabel": "Lebih selamat",
@@ -81,6 +96,9 @@
   "Filters-All": "Semua",
   "Filters-Default": "Default",
   "Filters-Reset": "Kosongkan Penapis",
+  "Filters-Type-SingleAssets": "Aset Tunggal",
+  "Filters-Type-StableLPs": "LP dalam Stablecoin",
+  "Filters-Type-Stables": "LP dengan Stablecoin",
   "Confirm": "Konfirm",
   "Cancel": "Batal",
   "No-Results": "Tiada Keputusan",
