--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -1,18 +1,29 @@
 {
   "App-Meta-Description": "多链收益优化器",
   "Disclaimer": "操作智能合约,代币,加密货币有一定的风险. 投资前请务必做好自己的调查和研究.",
-  "Vault-Wallet": "钱包",
+  "Network-UnknownError": "出现未知错误",
+  "Network-ConnectionRequired": "需要连接到 {{network}} 的钱包。",
+  "Network-Supports": "此应用程序支持{{network}}。",
+  "Network-ConnectedTo": "您当前已连接到 {{network}}。",
+  "Network-ConnectedUnsupported": "您当前连接到不受支持的网络。",
   "Network-ConnectWallet": "连接钱包",
+  "Network-DisconnectWallet": "断开钱包",
+  "Network-SwitchToNetwork": "切换到 {{network}} 网络",
+  "Network-GoToApp": "转到 {{network}} 应用",
+  "Network-SwitchNote": "您需要通过钱包手动切换网络。",
+  "Network-NoWalletAddress": "允许访问您钱包中的一个帐户。",
+  "Vault-Wallet": "钱包",
   "Vault-Balance": "余额",
   "Vault-APR": "年百分率",
   "Vault-APY": "年收益率",
   "Vault-APYDaily": "日收益率",
-  "Vault-TVL": "锁定总价值",
-  "Vault-AutocompoundingNote": "所有机枪池均以最佳速度进行自动复利",
+  "Vault-TVL": "总锁仓量",
+  "Vault-AutocompoundingNote": "所有金库均以最佳速度进行自动复利",
   "Vault-Approving": "批准中...",
   "Vault-ApproveButton": "批准",
   "Vault-ApprovalSuccess": "批准成功",
   "Vault-ApprovalError": "批准失败: {{error}}",
+  "Vault-BifiBuyback": "BIFI 回购 {{amount}}/天",
   "Vault-DepositButton": "存入",
   "Vault-DepositButtonAll": "存入全部",
   "Vault-DepositTokensNote": "您将收到{{mooToken}}代币作为存入{{assetToken}}的收据. 该收据将用于日后提取您的{{assetToken}}. 请勿把{{mooToken}} 提转或交易给任何陌生人!",
@@ -22,13 +33,13 @@
   "Vault-DepositError": "存入失败: {{error}}",
   "Vault-DepositScenario": "存款将会导致：",
   "Vault-DepositScenarioSwap": "为了平衡一对流动性对，用{{swapIn}}换取{{swapOut}}(可能存在±{{slippageTolerance}}滑点和存款费用)",
-  "Vault-DepositScenarioAddLiquidity": "增加流动性以收到{{poolToken}}",
-  "Vault-DepositScenarioDepositToVault": "将收到的{{poolToken}}存入Beefy机枪池",
+  "Vault-DepositScenarioAddLiquidity": "添加流动性以收到{{poolToken}}",
+  "Vault-DepositScenarioDepositToVault": "将收到的{{poolToken}}存入Beefy金库",
   "Vault-DepositScenarioReturnDust": "将未使用过的微量的{{tokenA}}和{{tokenB}}返还到您的钱包",
   "Vault-Withdrawing": "提出中...",
   "Vault-WithdrawButton": "提出",
   "Vault-WithdrawButtonAll": "提出全部",
-  "Vault-WithdrawFeeGlobal": "所有机枪池的提款费均为0.1%，除非机枪池卡上注明例外情况",
+  "Vault-WithdrawFeeGlobal": "所有金库的提款费均为0.1%，除非金库卡上注明例外情况",
   "Vault-WithdrawSuccess": "提出成功",
   "Vault-WithdrawError": "提出失败: {{error}}",
   "Vault-WithdrawScenario": "提出将会导致：",
@@ -39,33 +50,55 @@
   "Vault-Harvesting": "收割中...",
   "Vault-HarvestButton": "收割",
   "Vault-HarvestConfirm": "确认收割?",
-  "Vault-HarvestDescription": "所有机枪池皆自动複利, 无需人工手动收割. 这是针对经验丰富的用户所设计的进阶功能. 您确定要主动收割吗?",
+  "Vault-HarvestDescription": "所有金库皆自动複利, 无需人工手动收割. 这是针对经验丰富的用户所设计的进阶功能. 您确定要主动收割吗?",
   "Vault-HarvestSuccess": "收割成功",
   "Vault-HarvestError": "收割失败: {{error}}",
   "Vault-LastHarvest": "上一次收割时间",
-  "Vault-MainTitle": "机枪池",
+  "Vault-MainTitle": "金库",
   "Vault-SecondTitle": "存入 & 赚取利息",
   "Vault-DepositsPausedTitle": "存入已暂停",
-  "Vault-DepositsPausedMsg": "该机枪池目前暂停存入.",
+  "Vault-DepositsPausedMsg": "该金库目前暂停存入.",
   "Vault-DepositsRetiredTitle": "已废弃",
-  "Vault-DepositsRetiredMsg": "该机枪池已退役,请儘速提出您的资金",
+  "Vault-DepositsRetiredRewardsTitle": "已退役 - 底层平台终止奖励。",
+  "Vault-DepositsRetiredExploitTitle": "已退役 - 代币已被利用，资金在金库中是安全的。",
+  "Vault-DepositsRetiredTVLTitle": "已退役 - 总锁仓量太低了。",
+  "Vault-DepositsRetiredMsg": "该金库已退役,请儘速提出您的资金",
   "Vault-Staked": "已质押",
   "Vault-Description": "使用: {{vault}}",
   "Vault-Network": "选取网路",
   "Vault-Experimental": "试验版",
-  "Vault-Loading": "加载机枪池",
-  "Vault-NotFound": "未找到机枪池{{vaultId}}",
-  "Vaults-Back": "回到机枪池",
+  "Vault-Loading": "加载金库",
+  "Vault-NotFound": "未找到金库{{vaultId}}",
+  "Vault-Breakdown-VaultApr": "金库 APR",
+  "Vault-Breakdown-TradingApr": "交易 APR",
+  "Vault-Breakdown-BoostApr": "强化 APR",
+  "Vault-Breakdown-VaultDaily": "金库日收益",
+  "Vault-Breakdown-TradingDaily": "交易日收益",
+  "Vault-Breakdown-BoostDaily": "强化日收益",
+  "Vault-Boosts-Staked-Single": "已质押进 {{name}} 强化池",
+  "Vault-Boosts-Staked-Count": "已质押进 {{count}} 强化池",
+  "Vault-Banner-CakeV2-StakeLabel": "质押您的 {{symbol}}",
+  "Vault-Banner-CakeV2-StakeValue": "新的纯 {{symbol}} 金库",
+  "Vault-Banner-CakeV2-SaferLabel": "更安全",
+  "Vault-Banner-CakeV2-SaferValue": "{{count}} 位中间人",
+  "Vault-Banner-CakeV2-SmarterLabel": "更聪明",
+  "Vault-Banner-CakeV2-SmarterValue": "{{count}}+ 年复投",
+  "Vault-Banner-CakeV2-FairerLabel": "更公平",
+  "Vault-Banner-CakeV2-FairerValue": "费用减少 {{percent}}%",
+  "Vaults-Back": "回到金库",
   "Hide-Zero-Balances": "隐藏零余额资产",
-  "Hide-Zero-Vault-Balances": "已存入的机枪池",
-  "Retired-Vaults": "已废弃机枪池",
+  "Hide-Zero-Vault-Balances": "已存入金库",
+  "Retired-Vaults": "已废弃金库",
   "Filters-Platform": "平台",
-  "Filters-Vault-Type": "机枪池种类",
+  "Filters-Vault-Type": "金库种类",
   "Filters-Asset": "资产",
   "Filters-Sort": "排序",
   "Filters-All": "全部",
   "Filters-Default": "默认",
   "Filters-Reset": "清除筛选",
+  "Filters-Type-SingleAssets": "单一资产",
+  "Filters-Type-StableLPs": "稳定币LP",
+  "Filters-Type-Stables": "稳定币",
   "Confirm": "确认",
   "Cancel": "取消",
   "No-Results": "无结果",
@@ -79,7 +112,7 @@
   "socials": "社群",
   "buy": "购买",
   "products": "产品",
-  "Powered-By": "POWERED BY",
+  "Powered-By": "技术支持来自",
   "IFO-Guide": "IFO 教程",
   "Available-To-Stake": "可质押",
   "Stake": "质押",
@@ -89,8 +122,8 @@
   "Coming-Soon": "即将推出",
   "Finished": "已结束",
   "End": "结束",
-  "Stakes-Meta-Title": "增强-{{networkName}}",
-  "Stake-Meta-Title": "赚取{{earnedToken}}-由{{boostedBy}}增强-{{networkName}}",
+  "Stakes-Meta-Title": "强化-{{networkName}}",
+  "Stake-Meta-Title": "赚取{{earnedToken}}-由{{boostedBy}}强化-{{networkName}}",
   "Stake-Button-Stake": "质押",
   "Stake-Button-Claim": "领取",
   "Stake-Button-Approval": "批准",
@@ -103,12 +136,12 @@
   "Stake-Balancer-Half-Time": "减半期",
   "Stake-BoostedBy": "由 {{name}} 强化",
   "Stake-Button-Back": "返回",
-  "Stake-Pool-Retired": "该机枪池已结束. 请提出您的资金.",
+  "Stake-Pool-Retired": "该金库已结束. 请提出您的资金.",
   "Stake-Total-Value-Locked": "锁定总价值",
-  "Stake-Your-Pool": "您的机枪池",
+  "Stake-Your-Pool": "您的金库",
   "Stake-Current-Daily": "当前日收益率",
-  "Add-Liquidity": "增加流动性",
-  "Remove-Liquidity": "减少流动性",
+  "Add-Liquidity": "添加流动性",
+  "Remove-Liquidity": "解除流动性",
   "Buy-Token": "购买代币",
   "Wrap-BNB": "Wrap BNB",
   "Boost": "强化",
