Add warnings for overborrowed vaults

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -64,6 +64,9 @@
   "Vault-DepositsRetiredExploitTitle": "RETIRED - Token has been exploited, funds are SAFU in vault.",
   "Vault-DepositsRetiredTVLTitle": "RETIRED - TVL is too low.",
   "Vault-DepositsRetiredMsg": "Vault retired, withdraw your funds ASAP",
+  "Vault-LiquidityWarningTitle": "{{name}} overborrowed, please check {{platform}} for when you can withdraw.",
+  "Vault-LendingWarningTitle": "Uses leverage, please read the docs before depositing.",
+  "Vault-GeneralWarningTitle": "Please DYOR before depositing.",
   "Vault-Staked": "Staked",
   "Vault-Description": "Uses: {{vault}}",
   "Vault-Network": "Select Network",
