Add mint token link option

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -148,6 +148,7 @@
   "Add-Liquidity": "Add Liquidity",
   "Remove-Liquidity": "Remove Liquidity",
   "Buy-Token": "Buy Token",
+  "Mint-Token": "Mint Token",
   "Wrap-BNB": "Wrap BNB",
   "Boost": "Boost",
   "Experimental": "Experimental",
