--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -115,7 +115,7 @@
   "stats": "stats",
   "app": "app",
   "socials": "socials",
-  "buy": "buy",
+  "buy": "Buy Crypto",
   "insure": "insure",
   "products": "products",
   "Powered-By": "POWERED BY",
