add v2 redirect banner (#1104)
* add v2 redirect banner

* update paddings

* fix button style

Co-authored-by: erenjaegar77 <eerenjaegar77@protonmail.com>

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -176,5 +176,8 @@
       ]
     }
   ],
-  "InsurAce-Button": "Insure Vaults"
+  "InsurAce-Button": "Insure Vaults",
+  "V2Banner-Title": "This app will soon be replaced with Beefy’s updated v2 interface.",
+  "V2Banner-Text": "No user actions are required. You can try the new version now.",
+  "V2Banner-Button": "Try the Beta"
 }
